# redraft

./: .gitignore  .luacheckrc  .pre-commit-config.yaml  DESIGN.md  LICENSE  Makefile  README.md  TODO.md  _typos.toml  install.sh  pyproject.toml  stylua.toml  uninstall.sh
Redraft.spoon/: init.lua
Redraft.spoon/lib/: action.lua  clipboard.lua  config.lua  focus.lua  menu.lua  selection.lua  services.lua  ui.lua
src/redraft/: __init__.py  base.py  cli.py  config.py  engine.py  prompt.py  protect.py
src/redraft/prompts/: fix-prompt.txt  formal-prompt.txt  friendly-prompt.txt
src/redraft/providers/: __init__.py  _shell.py  agent.py  command.py  embedded.py  languagetool.py  ollama.py
tests/: test_agent.py  test_cli.py  test_config.py  test_embedded.py  test_engine.py  test_http_providers.py  test_profiles.py  test_prompt.py  test_protect.py  test_providers.py
